# adventofcode2022

./: CMakeLists.txt
day01/: Day01.cpp
day02/: Day02.cpp
day03/: Day03.cpp
day04/: Day04.cpp
day05/: Day05.cpp  Day05.h
day06/: Day06.cpp
day07/: Day07.cpp
day08/: Day08.cpp
day09/: Day09.cpp
day10/: Day10.cpp
day11/: BigInt.cpp  BigInt.h  Day11.cpp
day12/: Day12.cpp
day13/: Day13.cpp  input.txt
day14/: Day14.cpp
day15/: Day15.cpp
day16/: Day16.cpp
day17/: Day17.cpp  a.py
day18/: Day18.cpp
